# mdpad

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  book.toml  llms-full.txt  llms.txt
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DataFlow.md  Overview.md  README.md  SUMMARY.md  api.md  architecture.md  changelog.md  clipboard.md  faq.md  getting-started.md  install.md  introduction.md  rendering.md  troubleshooting.md  usage.md
src/: app.rs  cli.rs  main.rs
src/markdown/: model.rs  parser.rs
src/render/: ansi.rs  block.rs  highlight.rs  inline.rs  links.rs  mermaid.rs  mod.rs  table.rs  theme.rs  wrap.rs
src/ui/: clipboard.rs  editor.rs  help.rs  mod.rs  navigate.rs  search.rs  selection.rs  statusbar.rs  term.rs  toc.rs  viewer.rs
tests/: render_integration.rs
tests/fixtures/: report.md  showcase.md
